tests/tests/ui/auto_uuid_on_bool.stderr
error[E0277]: field type `bool` is not compatible with the requested auto strategy `toasty::codegen_support::auto::tag::Uuid`
 --> tests/ui/auto_uuid_on_bool.rs:9:9
  |
9 |     id: bool,
  |         ^^^^ incompatible Rust type for `#[auto(...)]`
  |
  = help: the trait `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Uuid>` is not implemented for `bool`
  = note: see `toasty::codegen_support::auto` for the compatibility table
  = help: the following other types implement trait `toasty::codegen_support::auto::AutoCompatible<Strategy>`:
            `Option<T>` implements `toasty::codegen_support::auto::AutoCompatible<S>`
            `i16` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `i32` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `i64` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `i8` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `isize` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `u16` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
            `u32` implements `toasty::codegen_support::auto::AutoCompatible<toasty::codegen_support::auto::tag::Increment>`
          and $N others
note: required by a bound in `_check`
 --> tests/ui/auto_uuid_on_bool.rs:5:17
  |
5 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ required by this bound in `_check`
...
9 |     id: bool,
  |         ---- required by a bound in this function
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
